--- a/skavaForum/package.json
+++ b/skavaForum/package.json
@@ -34,8 +34,11 @@
     "html-webpack-plugin": "^3.2.0",
     "mongodb": "^3.0.4",
     "mongojs": "^2.5.0",
+    "nodemailer": "^4.6.7",
     "react": "^16.4.1",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.4"
   }
 }
