--- a/skavaForum/package.json
+++ b/skavaForum/package.json
@@ -32,6 +32,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "js-cookie": "^2.2.0",
     "mongodb": "^3.0.4",
     "mongojs": "^2.5.0",
     "nodemailer": "^4.6.7",
