--- a/skavaForum/package.json
+++ b/skavaForum/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
+    "crypto": "^1.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "express-validator": "^5.2.0",
