--- a/skavaForum/package.json
+++ b/skavaForum/package.json
@@ -16,6 +16,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "nodemon": "^1.18.2",
     "webpack": "^4.16.0",
     "webpack-cli": "^3.0.8",
@@ -26,6 +27,7 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "concurrently": "^4.0.1",
     "cookie-parser": "^1.4.3",
     "crypto": "^1.0.1",
     "express": "^4.16.3",
@@ -39,10 +41,14 @@
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
+    "react-google-login": "^3.2.1",
     "react-richtext": "^1.1.0",
     "react-router-dom": "^4.3.1",
     "react-rte": "^0.16.1",
     "react-rte-image": "^0.11.1",
-    "react-scripts": "^1.1.4"
+    "react-scripts": "^1.1.4",
+    "react-social-login": "^3.4.2",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1"
   }
 }
